Fixed margin spacing

--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,7 @@
     justify-content: center!important;
     position: fixed;
     width: 100%;
-    height: 2em;
+    height: 4em;
     background-color: white;
     z-index: 100;
   }
