--- a/src/views/pages/Clients/Clients.css
+++ b/src/views/pages/Clients/Clients.css
@@ -1,3 +1,33 @@
+@media only screen and (max-width: 40em) {
+    .grid-container-client {
+        margin-top: 0em!important;
+        grid-template-columns: 1fr 1fr!important;
+        grid-template-rows: 4.5em 1fr 4em!important;
+    }
+    .client-description-container {
+        grid-row: 2/3!important;
+        grid-column: 1/3!important;
+        padding: 0 0.5em 0 0;
+    }
+    .client-description {
+        padding: 0 0 1em 0!important;
+    }
+    .client-button-container {
+        grid-row:3/4!important;
+        grid-column: 1/3!important;
+    }
+    .client-button {
+        padding: 1em;
+    }
+    .logo-container {
+        grid-row-start: 1!important;
+        grid-column: 1/3!important;
+        align-items: center!important;
+        justify-content: center!important;
+    }
+}
+
+
 .grid-container-client {
     display: grid;
     grid-template-columns: 1fr 1fr 10em;
@@ -5,6 +35,7 @@
     align-items: start;
     align-content: start;
     column-gap: 0;
+    row-gap: 0;
     width: 100%;
 }
 .client-description-container {
@@ -18,6 +49,7 @@
 }
 
 .logo-container {
+    height: 100%;
     grid-row-start: 1;
     grid-column-start: 3;
 }
